fix columns overflow when viewframe is small

--- a/src/sortable/sortable.css
+++ b/src/sortable/sortable.css
@@ -5,7 +5,6 @@
   min-width: 100%;
   text-align: inherit;
   padding:1px 0;
-  white-space: nowrap;
   text-transform: none !important;
 }
 .bo-SortButton-icon {
